--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,16 @@ name = "zero2prod"
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11"
+serde = { version = "1", features = ["derive"] }
 
-[profile.release]
-codegen-units = 1
-
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate",
+]
